Optimized projects image load

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<main>
 		<section class="about">
 			<!-- My Photo -->
-			<div class="loading-image" id="loadingImage">
+			<div class="loading-image" id="loadingPhoto">
 				<svg 
 					version="1.0" xmlns="http://www.w3.org/2000/svg"
 					viewBox="0 0 1280.000000 1198.000000"
@@ -56,7 +56,7 @@
 					</g>
 				</svg>
 			</div>
-			<img class="image" id="image" src="media/photo.jpg" alt="My Photo">
+			<img class="loaded-image" id="loadedPhoto" src="media/photo.jpg" alt="My Photo">
 			<article class="article">
 				<h2 class="title" id="aboutSectionTitle">About me</h2>
 				<p class="paragraph">
@@ -70,7 +70,15 @@
 				<!-- Project -->
 				<div class="project">
 					<a href="https://ketteiprot.github.io/HolaMundoWebCopy/" class="website-link">
-						<img class="image" src="media/projects/HolaMundoWebCopy.jpg" title="Visit the live site" alt="HolaMundoWebCopy screenshot"> 
+						<!-- Loading Element -->
+						<div class="loadingProjectImage">
+							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+								<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+							</svg>
+						</div>
+						<!-- Loaded Element -->
+						<img class="loadedProjectImage" src="media/projects/HolaMundoWebCopy.jpg" title="Visit the live site" alt="HolaMundoWebCopy screenshot"> 
 					</a>
 					<a class="github-link" href="https://github.com/KetteiPrOt/HolaMundoWebCopy">
 						<h3 class="project-name">
@@ -82,7 +90,15 @@
 				<!-- Project -->
 				<div class="project">
 					<a href="https://ketteiprot.github.io/FalconMastersWebCopy/" class="website-link">
-						<img class="image" src="media/projects/FalconMastersWebCopy.jpg" title="Visit the live site" alt="FalconMastersWebCopy screenshot"> 
+						<!-- Loading Element -->
+						<div class="loadingProjectImage">
+							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+								<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+							</svg>
+						</div>
+						<!-- Loaded Element -->
+						<img class="loadedProjectImage" src="media/projects/FalconMastersWebCopy.jpg" title="Visit the live site" alt="FalconMastersWebCopy screenshot"> 
 					</a>
 					<a href="https://github.com/KetteiPrOt/FalconMastersWebCopy" class="github-link">
 						<h3 class="project-name">
@@ -94,7 +110,15 @@
 				<!-- Project -->
 				<div class="project">
 					<a href="https://ketteiprot.github.io/DilanRomero/" class="website-link">
-						<img class="image" src="media/projects/DilanRomero.jpg" title="Visit the live site" alt="Landing Page project image"> 
+						<!-- Loading Element -->
+						<div class="loadingProjectImage">
+							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+								<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+							</svg>
+						</div>
+						<!-- Loaded Element -->
+						<img class="loadedProjectImage" src="media/projects/DilanRomero.jpg" title="Visit the live site" alt="Landing Page project image"> 
 					</a>
 					<a href="https://github.com/KetteiPrOt/DilanRomero" class="github-link">
 						<h3 class="project-name">
@@ -106,7 +130,15 @@
 				<!-- Project -->
 				<div class="project">
 					<a href="https://ketteiprot.github.io/weapons/" class="website-link">
-						<img class="image" src="media/projects/weapons.jpg" title="Visit the live site" alt="Weapons Gallery project"> 
+						<!-- Loading Element -->
+						<div class="loadingProjectImage">
+							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+								<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+							</svg>
+						</div>
+						<!-- Loaded Element -->
+						<img class="loadedProjectImage" src="media/projects/weapons.jpg" title="Visit the live site" alt="Weapons Gallery project"> 
 					</a>
 					<a href="https://github.com/KetteiPrOt/weapons" class="github-link">
 						<h3 class="project-name">
@@ -118,7 +150,15 @@
 				<!-- Project -->
 				<div class="project">
 					<a href="https://ketteiprot.github.io/AnimeGallery/" class="website-link">
-						<img class="image" src="media/projects/AnimeGallery.jpg" title="Visit the live site" alt="Anime Gallery project image"> 
+						<!-- Loading Element -->
+						<div class="loadingProjectImage">
+							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+								<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+							</svg>
+						</div>
+						<!-- Loaded Element -->
+						<img class="loadedProjectImage" src="media/projects/AnimeGallery.jpg" title="Visit the live site" alt="Anime Gallery project image"> 
 					</a>
 					<a href="https://github.com/KetteiPrOt/AnimeGallery" class="github-link">
 						<h3 class="project-name">
@@ -130,7 +170,15 @@
 				<!-- Project -->
 				<div class="project">
 					<a href="https://ketteiprot.github.io/ittlc/" class="website-link">
-						<img class="image" src="media/projects/ittlc.jpg" title="Visit the live site" alt="Institutional website project"> 
+						<!-- Loading Element -->
+						<div class="loadingProjectImage">
+							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+								<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+							</svg>
+						</div>
+						<!-- Loaded Element -->
+						<img class="loadedProjectImage" src="media/projects/ittlc.jpg" title="Visit the live site" alt="Institutional website project"> 
 					</a>
 					<a href="https://github.com/KetteiPrOt/ittlc" class="github-link">
 						<h3 class="project-name">
@@ -147,7 +195,15 @@
 				<!-- Project -->
 				<div class="project">
 					<a href="https://github.com/KetteiPrOt/sysliquor" class="website-link" title="See the code in Github :)">
-						<img class="image" src="media/projects/liquorStore.jpg" alt="SysLicor project image"> 
+						<!-- Loading Element -->
+						<div class="loadingProjectImage">
+							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+								<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+							</svg>
+						</div>
+						<!-- Loaded Element -->
+						<img class="loadedProjectImage" src="media/projects/liquorStore.jpg" alt="SysLicor project image"> 
 					</a>
 					<a href="https://github.com/KetteiPrOt/sysliquor" class="github-link">
 						<h3 class="project-name">
@@ -159,7 +215,15 @@
 				<!-- Project -->
 				<div class="project">
 					<a href="https://github.com/KetteiPrOt/WeaponsGallery" class="website-link" title="See the code in Github :)">
-						<img class="image" src="media/projects/WeaponsGallery.jpg" alt="SysLicor project image"> 
+						<!-- Loading Element -->
+						<div class="loadingProjectImage">
+							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+								<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+							</svg>
+						</div>
+						<!-- Loaded Element -->
+						<img class="loadedProjectImage" src="media/projects/WeaponsGallery.jpg" alt="SysLicor project image"> 
 					</a>
 					<a href="https://github.com/KetteiPrOt/WeaponsGallery" class="github-link">
 						<h3 class="project-name">
@@ -198,27 +262,6 @@
 			</svg>
 		</a>
 	</footer>
-	<!-- <div style="background-color: green; color: white;">
-		Hola Mundo! <br><br>
-
-		<img style="display: none;" id="image" src="https://images4.alphacoders.com/106/106248.jpg">
-		<div id="loadingElement">
-			<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-				<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-				<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-			</svg> Loading image...
-		</div>
-	</div>
-	<script>
-		// const image = document.getElementById('image'),
-		// 	  loadingElement = document.getElementById('loadingElement');
-
-		// image.addEventListener('load', () => {
-		// 	loadingElement.style.display = 'none';
-		// 	image.style.display = 'block';
-		// 	console.log('The image has been charged!');
-		// });
-	</script> -->
 	<script src="js/loadingImages.js"></script>
 </body>
 </html>
