--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 					<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
 				</svg>
 			</div>
-			<img class="loaded-icon" src="media/icons/workana.png" alt="">
+			<img class="loaded-icon" src="media/icons/workana.png" alt="Workana Icon">
 		</a>
 		<a class="social-network github" href="https://github.com/KetteiPrOt">
 			<div class="loading-icon">
@@ -263,7 +263,7 @@
 					<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
 				</svg>
 			</div>
-			<img class="loaded-icon" src="media/icons/github.png" alt="">
+			<img class="loaded-icon" src="media/icons/github.png" alt="Github Icon">
 		</a>
 		<a class="social-network linkedin" href="#">
 			<div class="loading-icon">
