Disabled contact via email

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 	<link rel="icon" href="media/icon.png">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
+	<!-- 
+		Contact via email was disabled because is a violation to workana policies
+	 -->
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         (function() {
             // Here I am starting the emailjs service with the public key of my account
 			// You can see the public key here: https://dashboard.emailjs.com/admin/account
             emailjs.init('SQEhufhOJNX-BFeFS');
         })();
-    </script>
-    <script src="js/email.js" defer></script>
+    </script> -->
+    <!-- <script src="js/email.js" defer></script> -->
 	<script src="js/navigation.js" defer></script>
 </head>
 <body>
@@ -234,7 +237,10 @@
 				</div>
 			</div>
 		</section>
-		<section class="contact">
+		<!-- 
+			Contact via email was disabled because is a violation to workana polices
+		-->
+		<!-- <section class="contact">
 			<h2 class="title" id="contactSectionTitle">Contact</h2>
 			<form class="form" id="contactForm">
 				<input class="name" type="text" placeholder="Your name" maxlength="50" name="your_name">
@@ -244,7 +250,7 @@
 			</form>
 			<p class="success-send" id="successSend">Your message was sent!</p>
 			<p class="failed-send" id="failedSend">Error sending your message...</p>
-		</section>
+		</section> -->
 	</main>
 	<footer>
 		<a class="social-network workana" href="https://www.instagram.com/">
