--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 			<p class="failed-send" id="failedSend">Error sending your message...</p>
 		</section> -->
 	</main>
-	<footer>
-		<a class="social-network workana" href="https://www.instagram.com/">
+	<footer id="footerSection">
+		<a class="social-network workana" href="https://www.workana.com/freelancer/6c171c074d558a9e217924f407440f4a">
 			<div class="loading-icon">
 				<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
 					<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -271,7 +271,7 @@
 			</div>
 			<img class="loaded-icon" src="media/icons/github.png" alt="Github Icon">
 		</a>
-		<a class="social-network linkedin" href="#">
+		<a class="social-network linkedin" href="https://www.linkedin.com/in/fernado-joel-mero-travez-0873b2259/">
 			<div class="loading-icon">
 				<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
 					<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
