--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					</a>
 					<a href="https://github.com/KetteiPrOt/WeaponsGallery" class="github-link">
 						<h3 class="project-name">
-							Weapons remake [in building]
+							Weapons Gallery remake
 						</h3>
 					</a>
 					<p class="paragraph">Tailwind - Blade - PHP - Laravel</p>
