--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- 
 		Contact via email was disabled because is a violation to workana policies
 	 -->
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+	<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script> -->
     <!-- <script type="text/javascript">
         (function() {
             // Here I am starting the emailjs service with the public key of my account
@@ -68,11 +68,11 @@
 			</article>
 		</section>
 		<section class="my-projects web-design">
-			<h2 class="title" id="myProjectsSectionTitle">My Web Desing Proyects</h2>
+			<h2 class="title" id="myProjectsSectionTitle">Web Desing Proyects</h2>
 			<div class="projects">
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/HolaMundoWebCopy/" class="website-link">
+					<a href="https://ketteiprot.github.io/layout-practice-2/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -83,7 +83,7 @@
 						<!-- Loaded Element -->
 						<img class="loadedProjectImage" src="media/projects/HolaMundoWebCopy.jpg" title="Visit the live site" alt="HolaMundoWebCopy screenshot"> 
 					</a>
-					<a class="github-link" href="https://github.com/KetteiPrOt/HolaMundoWebCopy">
+					<a class="github-link" href="https://github.com/KetteiPrOt/layout-practice-2">
 						<h3 class="project-name">
 								Layout of a Blog
 						</h3>
@@ -92,7 +92,7 @@
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/FalconMastersWebCopy/" class="website-link">
+					<a href="https://ketteiprot.github.io/layout-practice-1/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -103,7 +103,7 @@
 						<!-- Loaded Element -->
 						<img class="loadedProjectImage" src="media/projects/FalconMastersWebCopy.jpg" title="Visit the live site" alt="FalconMastersWebCopy screenshot"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/FalconMastersWebCopy" class="github-link">
+					<a href="https://github.com/KetteiPrOt/layout-practice-1" class="github-link">
 						<h3 class="project-name">
 							Layout of a Courses Platform
 						</h3>
@@ -112,7 +112,7 @@
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/DilanRomero/" class="website-link">
+					<a href="https://ketteiprot.github.io/landing-page-practice/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -123,7 +123,7 @@
 						<!-- Loaded Element -->
 						<img class="loadedProjectImage" src="media/projects/DilanRomero.jpg" title="Visit the live site" alt="Landing Page project image"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/DilanRomero" class="github-link">
+					<a href="https://github.com/KetteiPrOt/landing-page-practice" class="github-link">
 						<h3 class="project-name">
 							Design of a Landing Page
 						</h3>
@@ -132,7 +132,7 @@
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/weapons/" class="website-link">
+					<a href="https://ketteiprot.github.io/weapons-gallery/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -143,7 +143,7 @@
 						<!-- Loaded Element -->
 						<img class="loadedProjectImage" src="media/projects/weapons.jpg" title="Visit the live site" alt="Weapons Gallery project"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/weapons" class="github-link">
+					<a href="https://github.com/KetteiPrOt/weapons-gallery" class="github-link">
 						<h3 class="project-name">
 							Design of a Weapons Gallery
 						</h3>
@@ -152,7 +152,7 @@
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/AnimeGallery/" class="website-link">
+					<a href="https://ketteiprot.github.io/anime-gallery/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -163,7 +163,7 @@
 						<!-- Loaded Element -->
 						<img class="loadedProjectImage" src="media/projects/AnimeGallery.jpg" title="Visit the live site" alt="Anime Gallery project image"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/AnimeGallery" class="github-link">
+					<a href="https://github.com/KetteiPrOt/anime-gallery" class="github-link">
 						<h3 class="project-name">
 							Design of a Anime Gallery
 						</h3>
@@ -172,7 +172,7 @@
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/ittlc/" class="website-link">
+					<a href="https://ketteiprot.github.io/layout-practice-3/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -183,7 +183,7 @@
 						<!-- Loaded Element -->
 						<img class="loadedProjectImage" src="media/projects/ittlc.jpg" title="Visit the live site" alt="Institutional website project"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/ittlc" class="github-link">
+					<a href="https://github.com/KetteiPrOt/layout-practice-3" class="github-link">
 						<h3 class="project-name">
 							Design of a institutional page
 						</h3>
@@ -193,11 +193,11 @@
 			</div>
 		</section>
 		<section class="my-projects web-development">
-			<h2 class="title">My Web Development Proyects</h2>
+			<h2 class="title">Web Apps Projects</h2>
 			<div class="projects">				
 				<!-- Project -->
 				<div class="project">
-					<a href="https://github.com/KetteiPrOt/sysliquor" class="website-link" title="See the code in Github :)">
+					<a href="https://github.com/KetteiPrOt/inventrack" class="website-link" title="See the code in Github :)">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -208,16 +208,16 @@
 						<!-- Loaded Element -->
 						<img class="loadedProjectImage" src="media/projects/liquorStore.jpg" alt="SysLicor project image"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/sysliquor" class="github-link">
+					<a href="https://github.com/KetteiPrOt/inventrack" class="github-link">
 						<h3 class="project-name">
-							Inventory Managment System
+							Inventory Tracking App
 						</h3>
 					</a>
 					<p class="paragraph">Tailwind - Blade - PHP - Laravel - SQL</p>
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://github.com/KetteiPrOt/WeaponsGallery" class="website-link" title="See the code in Github :)">
+					<a href="https://github.com/KetteiPrOt/weapons-gallery-crud" class="website-link" title="See the code in Github :)">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -228,7 +228,7 @@
 						<!-- Loaded Element -->
 						<img class="loadedProjectImage" src="media/projects/WeaponsGallery.jpg" alt="SysLicor project image"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/WeaponsGallery" class="github-link">
+					<a href="https://github.com/KetteiPrOt/weapons-gallery-crud" class="github-link">
 						<h3 class="project-name">
 							Weapons Gallery remake
 						</h3>
