Translated and Updated links

--- a/index.html
+++ b/index.html
@@ -7,30 +7,27 @@
 	<link rel="icon" href="media/icon.png">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
-	<!-- 
-		Contact via email was disabled because is a violation to workana policies
-	 -->
-	<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script> -->
-    <!-- <script type="text/javascript">
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
         (function() {
             // Here I am starting the emailjs service with the public key of my account
 			// You can see the public key here: https://dashboard.emailjs.com/admin/account
             emailjs.init('SQEhufhOJNX-BFeFS');
         })();
-    </script> -->
-    <!-- <script src="js/email.js" defer></script> -->
+    </script>
+    <script src="js/email.js" defer></script>
 	<script src="js/navigation.js" defer></script>
 </head>
 <body>
 	<header>
 		<nav class="navigation">
-			<a class="link" id="aboutLink" href="#about">About</a>
-			<a class="link" id="myProjectsLink" href="#myProjects">My Projects</a>
-			<a class="link" id="contactLink" href="#contact">Contact</a>
+			<a class="link" id="aboutLink" href="#about">Acerca de</a>
+			<a class="link" id="myProjectsLink" href="#myProjects">Mis Proyectos</a>
+			<a class="link" id="contactLink" href="#contact">Contacto</a>
 		</nav>
 		<div class="name">
 			<h1 class="title">Fernando Mero</h1>
-			<p class="paragraph">Web Developer</p>			
+			<p class="paragraph">Desarrollador Web</p>			
 		</div>
 	</header>
 	<main>
@@ -61,18 +58,18 @@
 			</div>
 			<img class="loaded-image" id="loadedPhoto" src="media/photo.jpg" alt="My Photo">
 			<article class="article">
-				<h2 class="title" id="aboutSectionTitle">About me</h2>
+				<h2 class="title" id="aboutSectionTitle">Sobre mi</h2>
 				<p class="paragraph">
-					I help interested and innovative clients <a class="link" href="https://www.workana.com/freelancer/6c171c074d558a9e217924f407440f4a">around the world</a> to create or modify applications and websites that increase the growth of their businesses, so they can have more stability and autonomy in their lives doing what they are passionate about :)
+					Ayudo a clientes interesados e innovadores de <a class="link" href="https://www.workana.com/freelancer/6c171c074d558a9e217924f407440f4a">todo el mundo</a> a crear o modificar aplicaciones y sitios web que aumenten el crecimiento de sus negocios, para que puedan tener más estabilidad y autonomía en sus vidas haciendo lo que les apasiona :)
 				</p>
 			</article>
 		</section>
 		<section class="my-projects web-design">
-			<h2 class="title" id="myProjectsSectionTitle">Web Desing Proyects</h2>
+			<h2 class="title" id="myProjectsSectionTitle">Proyectos de Diseño Web</h2>
 			<div class="projects">
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/layout-practice-2/" class="website-link">
+					<a href="https://fernandomerodev.github.io/layout-practice-2/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -85,14 +82,14 @@
 					</a>
 					<a class="github-link" href="https://github.com/KetteiPrOt/layout-practice-2">
 						<h3 class="project-name">
-								Layout of a Blog
+								Maquetación de un Blog
 						</h3>
 					</a>
 					<p class="paragraph">HTML - CSS - Flexbox - Grid</p>
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/layout-practice-1/" class="website-link">
+					<a href="https://fernandomerodev.github.io/layout-practice-1/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -105,14 +102,14 @@
 					</a>
 					<a href="https://github.com/KetteiPrOt/layout-practice-1" class="github-link">
 						<h3 class="project-name">
-							Layout of a Courses Platform
+							Maquetación de una Plataforma
 						</h3>
 					</a>
 					<p class="paragraph">HTML - CSS - Flexbox - Grid</p>
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/landing-page-practice/" class="website-link">
+					<a href="https://fernandomerodev.github.io/landing-page-practice/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -125,14 +122,14 @@
 					</a>
 					<a href="https://github.com/KetteiPrOt/landing-page-practice" class="github-link">
 						<h3 class="project-name">
-							Design of a Landing Page
+							Landing Page
 						</h3>
 					</a>
 					<p class="paragraph">HTML - CSS - JS - Flexbox - Grid</p>
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/weapons-gallery/" class="website-link">
+					<a href="https://fernandomerodev.github.io/weapons-gallery/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -145,14 +142,14 @@
 					</a>
 					<a href="https://github.com/KetteiPrOt/weapons-gallery" class="github-link">
 						<h3 class="project-name">
-							Design of a Weapons Gallery
+							Galería de Armas
 						</h3>
 					</a>
 					<p class="paragraph">HTML - CSS - JS - Bootstrap 5</p>
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/anime-gallery/" class="website-link">
+					<a href="https://fernandomerodev.github.io/anime-gallery/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -165,14 +162,14 @@
 					</a>
 					<a href="https://github.com/KetteiPrOt/anime-gallery" class="github-link">
 						<h3 class="project-name">
-							Design of a Anime Gallery
+							Galería de Anime
 						</h3>
 					</a>
 					<p class="paragraph">HTML - CSS - JS - Flexbox</p>
 				</div>
 				<!-- Project -->
 				<div class="project">
-					<a href="https://ketteiprot.github.io/layout-practice-3/" class="website-link">
+					<a href="https://fernandomerodev.github.io/layout-practice-3/" class="website-link">
 						<!-- Loading Element -->
 						<div class="loadingProjectImage">
 							<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -185,7 +182,7 @@
 					</a>
 					<a href="https://github.com/KetteiPrOt/layout-practice-3" class="github-link">
 						<h3 class="project-name">
-							Design of a institutional page
+							Pagina Institucional
 						</h3>
 					</a>
 					<p class="paragraph">HTML - CSS - JS - Flexbox - Grid</p>
@@ -210,7 +207,7 @@
 					</a>
 					<a href="https://github.com/KetteiPrOt/inventrack" class="github-link">
 						<h3 class="project-name">
-							Inventory Tracking App
+							Control de Inventario
 						</h3>
 					</a>
 					<p class="paragraph">Tailwind - Blade - PHP - Laravel - SQL</p>
@@ -230,17 +227,14 @@
 					</a>
 					<a href="https://github.com/KetteiPrOt/weapons-gallery-crud" class="github-link">
 						<h3 class="project-name">
-							Weapons Gallery remake
+							Galería Editable
 						</h3>
 					</a>
 					<p class="paragraph">Tailwind - Blade - PHP - Laravel</p>
 				</div>
 			</div>
 		</section>
-		<!-- 
-			Contact via email was disabled because is a violation to workana polices
-		-->
-		<!-- <section class="contact">
+		<section class="contact">
 			<h2 class="title" id="contactSectionTitle">Contact</h2>
 			<form class="form" id="contactForm">
 				<input class="name" type="text" placeholder="Your name" maxlength="50" name="your_name">
@@ -250,7 +244,7 @@
 			</form>
 			<p class="success-send" id="successSend">Your message was sent!</p>
 			<p class="failed-send" id="failedSend">Error sending your message...</p>
-		</section> -->
+		</section>
 	</main>
 	<footer id="footerSection">
 		<a class="social-network workana" href="https://www.workana.com/freelancer/6c171c074d558a9e217924f407440f4a">
