--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fernando Mero -> My Proyects</title>
+	<title>Fernando Mero</title>
 	<link rel="icon" href="media/icon.png">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function() {
-            // Here I am starting the emailjs service with the public key of my account
-			// You can see the public key here: https://dashboard.emailjs.com/admin/account
-            emailjs.init('SQEhufhOJNX-BFeFS');
-        })();
-    </script>
-    <script src="js/email.js" defer></script>
 	<script src="js/navigation.js" defer></script>
 </head>
 <body>
@@ -233,17 +224,6 @@
 					<p class="paragraph">Tailwind - Blade - PHP - Laravel</p>
 				</div>
 			</div>
-		</section>
-		<section class="contact">
-			<h2 class="title" id="contactSectionTitle">Contact</h2>
-			<form class="form" id="contactForm">
-				<input class="name" type="text" placeholder="Your name" maxlength="50" name="your_name">
-				<input class="email" type="email" placeholder="Your email" maxlength="50" name="your_email">
-				<textarea class="text-area" placeholder="A message for me..." maxlength="500" name="message"></textarea>
-				<button class="btn-send" type="submit">Send</button>
-			</form>
-			<p class="success-send" id="successSend">Your message was sent!</p>
-			<p class="failed-send" id="failedSend">Error sending your message...</p>
 		</section>
 	</main>
 	<footer id="footerSection">
